Updated Angular CLI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
 <app-admin-sidebar></app-admin-sidebar>
 <!-- <app-endorsementform></app-endorsementform> -->
 <!-- <app-landing></app-landing> -->
-<!-- <app-onboarding></app-onboarding>
-<app-login></app-login> -->
+<!-- <app-onboarding></app-onboarding> -->
+<!-- <app-login></app-login> -->
 <!-- <app-forgotpass></app-forgotpass> -->
 <!-- <app-companyprofile></app-companyprofile> -->
 <!-- <app-companydirectory></app-companydirectory> -->
