--- a/src/app/pages/admin/components/admin-events/admin-events.component.html
+++ b/src/app/pages/admin/components/admin-events/admin-events.component.html
@@ -1,5 +1,5 @@
-<h1 class="p-0.5 flex items-center sm:px-6 lg:px-8">Manage Academic Year</h1>
-<p class="p-0.5 text-lg text-gray-500 font-normal sm:px-6 lg:px-8">The school year reflects on the endorsement form generated for every submission. Resetting it will also mean that all data will be deleted.</p>
+<h1 class="p-0.5 flex items-center sm:px-6 lg:px-8">Manage Events</h1>
+<p class="p-0.5 text-lg text-gray-500 font-normal sm:px-6 lg:px-8"> This is where you can set deadlines which will notify your department near the due date.</p>
 <!-- This example requires Tailwind CSS v2.0+
      Table -->
 
