--- a/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
@@ -290,13 +290,13 @@
   <!-- Content of each page selected -->
   <div class="p-5 text-2xl font-bold">
     <!-- <app-admin-dashboard></app-admin-dashboard> -->
-    <app-admin-submissions></app-admin-submissions>
-    <app-admin-esignature></app-admin-esignature>
-    <app-admin-content></app-admin-content>
-    <app-admin-accounts></app-admin-accounts>
-    <app-admin-iso></app-admin-iso>
-    <app-admin-reports></app-admin-reports>
+    <!-- <app-admin-submissions></app-admin-submissions> -->
+    <!-- <app-admin-esignature></app-admin-esignature> -->
+    <!-- <app-admin-content></app-admin-content> -->
+    <!-- <app-admin-accounts></app-admin-accounts> -->
+    <!-- <app-admin-iso></app-admin-iso> -->
+    <!-- <app-admin-reports></app-admin-reports> -->
     <app-admin-events></app-admin-events>
-    <app-admin-logs></app-admin-logs>
-    <app-admin-acadyear></app-admin-acadyear>
-  </div>
+    <!-- <app-admin-logs></app-admin-logs> -->
+    <!-- <app-admin-acadyear></app-admin-acadyear> -->
+  </div> 
