Updates on Student Views

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
 
 <!-- Tempoararily switch from one page to another -->
 
-<app-admin-sidebar></app-admin-sidebar>
+<!-- <app-admin-sidebar></app-admin-sidebar> -->
 <!-- <app-endorsementform></app-endorsementform> -->
-<!-- <app-landing></app-landing> -->
-<!-- <app-onboarding></app-onboarding> -->
+<app-landing></app-landing>
+<app-onboarding></app-onboarding>
 <!-- <app-login></app-login> -->
-<!-- <app-forgotpass></app-forgotpass> -->
+<app-forgotpass></app-forgotpass>
 <!-- <app-companyprofile></app-companyprofile> -->
 <!-- <app-companydirectory></app-companydirectory> -->
 
