Added navigation routes

--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,1 +1,10 @@
-<p>admin works!</p>
+
+<div class="relative min-h-screen md:flex">
+    <app-admin-sidebar>
+    </app-admin-sidebar>
+    <div class="">
+        <router-outlet></router-outlet>
+    </div>     
+</div>
+
+<app-footer></app-footer>
