--- a/src/app/pages/endorsementform/endorsementform.component.html
+++ b/src/app/pages/endorsementform/endorsementform.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="min-h-screen flex  justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
   <form action="#" method="POST">
     <div class="place-self-center p-4">
@@ -73,3 +75,5 @@
     </div>
   </form>
 </div>
+
+<app-footer></app-footer>
