--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,12 @@
-<app-navbar></app-navbar>
+
 
 <!-- Tempoararily switch from one page to another -->
-
-<!-- <app-admin-sidebar></app-admin-sidebar> -->
+<router-outlet>
 <!-- <app-endorsementform></app-endorsementform> -->
-<app-landing></app-landing>
-<app-onboarding></app-onboarding>
+
+<!-- <app-onboarding></app-onboarding> -->
 <!-- <app-login></app-login> -->
-<app-forgotpass></app-forgotpass>
+<!-- <app-forgotpass></app-forgotpass> -->
 <!-- <app-companyprofile></app-companyprofile> -->
 <!-- <app-companydirectory></app-companydirectory> -->
-
-<app-footer></app-footer>
+</router-outlet>
