--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -14,143 +14,8 @@ require('@tailwindcss/forms'),
 }
 ```
 -->
-
-<!-- Section 1: Hero Section -->
-<section class="px-2 py-32 bg-white md:px-0">
-  <div class="container items-center max-w-6xl px-8 mx-auto xl:px-5">
-    <div class="flex flex-wrap items-center sm:-mx-3">
-      <div class="w-full md:w-1/2 md:px-3">
-        <div
-          class="w-full pb-6 space-y-6 sm:max-w-md lg:max-w-lg md:space-y-4 lg:space-y-8 xl:space-y-9 sm:pr-5 lg:pr-0 md:pb-0">
-          <h1
-            class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl">
-            <span class="block xl:inline">The Internship Platform</span>
-            <span class="block text-green-600 xl:inline"> for CICS.</span>
-          </h1>
-          <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">Complete your pre-internship
-            application in a breeze.</p>
-          <div class="relative flex flex-col sm:flex-row sm:space-x-4">
-            <a href="#_"
-              class="flex items-center w-full px-6 py-3 mb-3 text-lg text-white bg-green-600 rounded-md sm:mb-0 hover:bg-green-700 sm:w-auto">
-              Start here
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <line x1="5" y1="12" x2="19" y2="12"></line>
-                <polyline points="12 5 19 12 12 19"></polyline>
-              </svg>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="w-full md:w-1/2">
-        <div class="w-full h-auto overflow-hidden sm:rounded-xl">
-          <img src="./assets/img/hero-img.png">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Section 3: View all Companies -->
-<section class="px-2 py-32 bg-white md:px-0">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="lg:text-center">
-      <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-        Find the right place where you can grow your career.
-      </p>
-      <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
-        Over 200 companies of all sizes put their trust in our institution.
-      </p>
-    </div>
-  </div>
-  <!-- <div class="py-12 w-full px-8 mt-16 items-center">
-    <img src="./assets/img/company-pic.png" class="w-auto" viewBox="0 0 1060 539">
-  </div> -->
-  <div class="py-12 w-full px-8 mt-16">
-    <div class="w-full flex justify-evenly items-center mt-4 flex-wrap lg:flex-nowrap">
-      <img src="./assets/img/logo-1.png" class="h-14 w-auto mt-4 lg:mt-2" alt="">
-      <img src="./assets/img/logo-2.png" class="h-14 w-auto mt-2 lg:mt-0" alt="">
-      <img src="./assets/img/logo-3.png" class="h-12 w-auto mt-2 lg:mt-0" alt="">
-      <img src="./assets/img/logo-4.png" class="h-14 w-auto mt-2 lg:mt-0" alt="">
-      <img src="./assets/img/logo-5.png" class="h-12 w-auto mt-2 lg:mt-0" alt="">
-    </div>
-  </div>
-  <div class="y-12 px-8 mt-16 flex justify-center lg:justify-center">
-    <button class="flex items-center w-full px-6 py-3 mb-3 text-lg text-white 
-    bg-green-600 rounded-md sm:mb-0 hover:bg-green-700 sm:w-auto">View all companies</button>
-  </div>
-</section>
-
-<!-- Section 4: Announcements -->
-<section class="px-2 py-32 bg-white md:px-0">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-wrap w-full mb-20">
-      <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-        <h1 class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Opportunities</h1>
-      </div>
-      <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:w-1/2">Find career opportunities from accredited companies you might want to apply to.</p>
-    </div>
-    <div class="flex flex-wrap -m-4">
-      <div class="xl:w-1/4 md:w-1/2 p-4">
-        <div class="bg-gray-100 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
-          <h3 class="tracking-widest text-green-500 text-xs font-medium">OCT. 3 2020</h3>
-          <h2 class="text-xl text-gray-900 font-medium">Back-end engineer</h2>
-          <h3 class="text-lg text-gray-500 font-medium">XYZ Company</h3>
-          <p class="leading-relaxed mt-4 max-w-2xl lg:mx-auto text-base">Information about the job description is found here. liquam in posuere nunc. Curabitur vitae orci tellus.</p>
-          <a class="mt-3 text-green-700 inline-flex items-center">Learn More
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <line x1="5" y1="12" x2="19" y2="12"></line>
-            <polyline points="12 5 19 12 12 19"></polyline>
-            </svg></a>
-        </div>
-      </div>
-      <div class="xl:w-1/4 md:w-1/2 p-4">
-        <div class="bg-gray-100 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
-          <h3 class="tracking-widest text-green-500 text-xs font-medium">OCT. 3 2020</h3>
-          <h2 class="text-xl text-gray-900 font-medium">Business Analyst</h2>
-          <h3 class="text-lg text-gray-500 font-medium">Generic Company</h3>
-          <p class="leading-relaxed mt-4 max-w-2xl lg:mx-auto text-base">Information about the job description is found here. liquam in posuere nunc. Curabitur vitae orci tellus.</p>
-          <a class="mt-3 text-green-700 inline-flex items-center">Learn More
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <line x1="5" y1="12" x2="19" y2="12"></line>
-            <polyline points="12 5 19 12 12 19"></polyline>
-            </svg></a>
-        </div>
-      </div>
-      <div class="xl:w-1/4 md:w-1/2 p-4">
-        <div class="bg-gray-100 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
-          <h3 class="tracking-widest text-green-500 text-xs font-medium">OCT. 3 2020</h3>
-          <h2 class="text-xl text-gray-900 font-medium">Quality Assurance Officer</h2>
-          <h3 class="text-lg text-gray-500 font-medium">Generic Company</h3>
-          <p class="leading-relaxed mt-4 max-w-2xl lg:mx-auto text-base">Information about the job description is found here. liquam in posuere nunc. Curabitur vitae orci tellus.</p>
-          <a class="mt-3 text-green-700 inline-flex items-center">Learn More
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <line x1="5" y1="12" x2="19" y2="12"></line>
-            <polyline points="12 5 19 12 12 19"></polyline>
-            </svg></a>
-        </div>
-      </div>
-      <div class="xl:w-1/4 md:w-1/2 p-4">
-        <div class="bg-gray-100 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
-          <h3 class="tracking-widest text-green-500 text-xs font-medium">OCT. 3 2020</h3>
-          <h2 class="text-xl text-gray-900 font-medium">Quality Assurance Officer</h2>
-          <h3 class="text-lg text-gray-500 font-medium">Generic Company</h3>
-          <p class="leading-relaxed mt-4 max-w-2xl lg:mx-auto text-base">Information about the job description is found here. liquam in posuere nunc. Curabitur vitae orci tellus.</p>
-          <a class="mt-3 text-green-700 inline-flex items-center">Learn More
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <line x1="5" y1="12" x2="19" y2="12"></line>
-            <polyline points="12 5 19 12 12 19"></polyline>
-            </svg></a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<app-navbar></app-navbar>
+<app-application></app-application>
+<app-company></app-company>
+<app-opportunities></app-opportunities>
+<app-footer></app-footer>
