--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="min-h-screen flex  justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
     <div>
@@ -24,7 +26,7 @@
 
       <div class="flex items-center justify-between">
         <div class="text-sm">
-          <a href="#" class="font-medium text-green-600 hover:text-green-500">
+          <a routerlink="forgotpass" href="forgotpass" class="font-medium text-green-600 hover:text-green-500">
             Forgot your password?
           </a>
         </div>
@@ -48,3 +50,5 @@
     </form>
   </div>
 </div>
+
+<app-footer></app-footer>
