--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="InternConnect" description="InternConnect is the internship platform for the UST - College of Information 
+        and Computing Sciences."/>
         <base href="/"/>
     </head>
     <body>
