--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,10 +1,5 @@
-
-<div class="relative min-h-screen md:flex">
-    <app-admin-sidebar>
-    </app-admin-sidebar>
-    <div class="">
-        <router-outlet></router-outlet>
-    </div>     
+<div class="relative min-h-screen md:flex bg-gray-50">
+  <app-admin-sidebar>
+  </app-admin-sidebar>
+    <router-outlet></router-outlet>
 </div>
-
-<app-footer></app-footer>
