--- a/src/app/pages/admin/components/admin-content/components/landing-update/landing-update.component.html
+++ b/src/app/pages/admin/components/admin-content/components/landing-update/landing-update.component.html
@@ -1,7 +1,11 @@
-<h1 class="p-0.5 flex items-center sm:px-6 lg:px-8">Manage Landing Page</h1>
-<p class="p-0.5 text-lg text-gray-500 font-normal sm:px-6 lg:px-8">This is where the logo and coverphoto can be changed from the
-  landing page.</p>
-
+<div class="pt-6 sm:px-6 lg:px-8 pb-5">
+  <div>
+    <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Manage Landing Page</h1>
+  </div>
+  <p class="text-lg text-gray-500">This is where the logo and coverphoto can be changed from the
+    landing page.</p>
+</div>
+  
 <!-- Landing Page Management -->
 <div>
   <div class="p-0.5 sm:px-6">
