--- a/src/app/pages/admin/components/admin-events/admin-events.component.html
+++ b/src/app/pages/admin/components/admin-events/admin-events.component.html
@@ -1,5 +1,9 @@
-<h1 class="p-0.5 flex items-center sm:px-6 lg:px-8">Manage Events</h1>
-<p class="p-0.5 text-lg text-gray-500 font-normal sm:px-6 lg:px-8"> This is where you can set deadlines which will notify your department near the due date.</p>
+<div class="pt-6 sm:px-6 lg:px-8 pb-5">
+  <div>
+    <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Manage Events</h1>
+  </div>
+  <p class="text-lg text-gray-500">This is where you can set deadlines which will notify your department near the due date.</p>
+</div>
 <!-- This example requires Tailwind CSS v2.0+
      Table -->
 
