--- a/src/app/pages/admin/components/admin-logs/admin-logs.component.html
+++ b/src/app/pages/admin/components/admin-logs/admin-logs.component.html
@@ -1,5 +1,9 @@
-<h1 class="p-0.5 flex items-center sm:px-6 lg:px-8">View logs</h1>
-<p class="p-0.5 text-lg text-gray-500 font-normal sm:px-6 lg:px-8">This contains a list of subsmissions that were approved or disapproved by the practicum coordinator.</p>
+<div class="pt-6 sm:px-6 lg:px-8 pb-10">
+  <div>
+    <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">View logs</h1>
+    <p class="text-lg text-gray-500">This contains a list of subsmissions that were approved or disapproved by the practicum coordinator.</p>
+  </div>
+</div>
 <!-- This example requires Tailwind CSS v2.0+
      Table -->
 <div class="flex flex-col">
