--- a/src/app/pages/admin/components/admin-reports/admin-reports.component.html
+++ b/src/app/pages/admin/components/admin-reports/admin-reports.component.html
@@ -1,4 +1,8 @@
-<h1 class="p-0.5 text-center sm:px-6 lg:px-8">Summary of Report</h1>
+<div class="pt-6 sm:px-6 lg:px-8 pb-10">
+  <div>
+    <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Summary of Report</h1>
+  </div>
+</div>
 <!-- This example requires Tailwind CSS v2.0+
      Table -->
 
@@ -151,9 +155,8 @@
   </div>
 </div>
 
-<!-- This example requires Tailwind CSS v2.0+
-     Pagination -->
-<div class="bg-white px-4 py-3 flex items-center justify-between border-gray-200 sm:px-6 lg:px-8">
+<!-- Pagination -->
+<div class="px-4 py-3 flex items-center justify-between border-gray-200 sm:px-6 lg:px-8">
   <div class="flex-1 flex justify-between sm:hidden">
     <a href="#"
       class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
