--- a/src/app/pages/companyprofile/companyprofile.component.html
+++ b/src/app/pages/companyprofile/companyprofile.component.html
@@ -1,1 +1,55 @@
-<p>companyprofile works!</p>
+<app-navbar></app-navbar>
+
+
+<body class="text-blueGray-700 antialiased">
+  <div id="__next">
+    <main class="profile-page">
+      <section class="relative block" style="height:500px">
+        <div class="absolute top-0 w-full h-full bg-center bg-cover"
+          style="background-image:url(&#x27;https://images.unsplash.com/photo-1499336315816-097655dcfbda?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2710&amp;q=80&#x27;)">
+          <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span></div>
+        <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
+          style="height:70px"><svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg"
+            preserveAspectRatio="none" version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+            <polygon class="text-blueGray-200 fill-current" points="2560 0 2560 100 0 100"></polygon>
+          </svg></div>
+      </section>
+      <section class="relative py-16 bg-blueGray-200">
+        <div class="md:w-9/12 mx-auto">
+          <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64">
+            <div class="px-6">
+              <div class="absolute left-2/4"><img alt="..."
+                  src="https://www.creative-tim.com/learning-lab/tailwind-starter-kit/img/team-2-800x800.jpg"
+                  class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16"
+                  style="max-width:150px" />
+              </div>
+              <div class="text-center mt-28">
+                <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">Accenture</h3>
+                <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase"><i
+                    class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i> Makati, Metro Manila
+                </div>
+                <button class="py-2 px-4 text-white bg-green-600 hover:bg-green-700 rounded-lg shadow-md" type="button">Visit Website</button>
+              </div>
+              <div class="mt-10 py-10 border-t border-blueGray-200">
+                <h3 class="text-2xl font-bold">Company Overview</h3>
+                <p class="pr-20">An artist of considerable range, Jenna the
+                  name taken by Melbourne-raised, Brooklyn-based Nick Murphy writes, performs and records all of his
+                  own music, giving it a warm, intimate feel with a solid groove structure. An artist of
+                  considerable range.</p>
+                <p class="pr-20">Address Line 1</p>
+                <p class="pr-20">Address Line 2</p>
+                <p class="pr-20">Address Line 3</p>
+                <h3 class="text-2xl font-bold">Contact Person</h3>
+                <p class="pr-20">Email Address</p>
+                <p class="pr-20">Full Name</p>
+                <p class="pr-20">Designation</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
+</body>
+
+<app-opportunities></app-opportunities>
