--- a/src/app/pages/landing/components/company/company.component.html
+++ b/src/app/pages/landing/components/company/company.component.html
@@ -23,7 +23,6 @@
       </div>
     </div>
     <div class="y-12 px-8 mt-16 flex justify-center lg:justify-center">
-      <a routerLink = "companydirectory" class="flex items-center w-full px-6 py-3 mb-3 text-lg text-white 
-      bg-green-600 rounded-md sm:mb-0 hover:bg-green-700 sm:w-auto">View all companies</a>
+      <a routerLink = "companydirectory" class="flex items-center w-full px-6 py-3 mb-3 text-lg text-red-500 font-bold border border-red-500 hover:bg-red-500 hover:text-white focus:shadow-outline rounded-2xl sm:mb-0 sm:w-auto">View all companies</a>
     </div>
   </section>
