--- a/src/app/pages/landing/components/status/status.component.html
+++ b/src/app/pages/landing/components/status/status.component.html
@@ -1,1 +1,166 @@
-<p>status works!</p>
+<app-navbar></app-navbar>
+
+<div class="status-page__container">
+  <div class="heading__container">
+    <h1 class="text-2xl text-center font-medium text-gray-900">
+        Fill out Endorsement Form
+      </h1>
+  </div>
+  <div class="hero__container">
+    <div class="student-container">
+      <div class="student-info__container">
+        <div class="bg-white shadow overflow-hidden sm:rounded-lg">
+          <div class="padding-alter">
+            <h3 class="text-lg leading-6 font-medium text-gray-900">
+              Applicant Information
+            </h3>
+            <p class=" text-gray-500">
+              Personal details and application.
+            </p>
+          </div>
+          <div class="border-t border-gray-200">
+            <dl>
+              <div class="bg-gray-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  Full name
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  Margot Foster
+                </dd>
+              </div>
+              <div class="bg-white-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  Application For
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  Endorsement request
+                </dd>
+              </div>
+              <div class="bg-gray-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  Email Address
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  Endorsement.requet.iics@ust.edu.ph
+                </dd>
+              </div>
+            </dl>
+          </div>
+        </div>
+      </div>
+      <div class="change-company__contianer">
+        <a href="#" class="change-company__btn"> Change Company</a>
+      </div>
+      <hr>
+      <div class="update-form__container">
+        <a href="#" class="updateForm__btn">Update Form</a>
+      </div>
+      <div class="legend-container">
+        <div class="bg-white shadow overflow-hidden sm:rounded-lg">
+          <div class="padding-alter">
+            <h3 class="text-lg leading-6 font-medium text-gray-900">
+              legend
+            </h3>
+          </div>
+          <div class="border-t border-gray-200">
+            <dl>
+              <div class="bg-gray-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  insert icon here
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  Acknowledged
+                </dd>
+              </div>
+              <div class="bg-white-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  insert icon here
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  Signed
+                </dd>
+              </div>
+              <div class="bg-gray-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  insert icon here
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  Sent to Company
+                </dd>
+              </div>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="status-container statuses-container">
+      <div class="acknowledged-container statuses-container">
+        <div class="bg-white shadow overflow-hidden sm:rounded-lg padding-alter">
+          <h3 class="text-lg leading-6 font-medium text-gray-900">
+            Acknowledged
+          </h3>
+          <p class=" text-gray-500">
+            Your application has been verified ang signed by the practicum coordinator, this will be forwarded to the
+            IGAARP coordinator for signing.
+          </p>
+          <div class="border-t border-gray-200">
+            <dl>
+              <div class="bg-white-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  Remarks
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  None
+                </dd>
+              </div>
+            </dl>
+          </div>
+        </div>
+      </div>
+      <div class="signed-container statuses-container">
+        <div class="bg-white shadow overflow-hidden sm:rounded-lg padding-alter">
+          <h3 class="text-lg leading-6 font-medium text-gray-900">
+            Signed
+          </h3>
+          <p class=" text-gray-500">
+            Your endorsement letter has been approved and signed by the CICS dean and IGAARP coordinator
+          </p>
+          <div class="border-t border-gray-200 ">
+            <dl>
+              <div class="bg-white-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  Remarks
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  None
+                </dd>
+              </div>
+            </dl>
+          </div>
+        </div>
+      </div>
+      <div class="sentTo-company-container statuses-container">
+        <div class="bg-white shadow overflow-hidden sm:rounded-lg padding-alter">
+          <h3 class="text-lg leading-6 font-medium text-gray-900">
+            Sent to Company
+          </h3>
+          <p class=" text-gray-500">
+            Your endorsement has been sent to the email address of the company representative indicated to the form you
+            have submitted.
+          </p>
+          <div class="border-t border-gray-200 ">
+            <dl>
+              <div class="bg-white-50 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <dt class="padding-alter text-sm font-medium text-gray-500">
+                  Remarks
+                </dt>
+                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                  None
+                </dd>
+              </div>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>  
