--- a/src/app/pages/admin/components/admin-submissions/components/pending-submissions/pending-submissions.component.html
+++ b/src/app/pages/admin/components/admin-submissions/components/pending-submissions/pending-submissions.component.html
@@ -1,5 +1,9 @@
-<h1 class="p-0.5 flex items-center sm:px-6 lg:px-8">Pending submissions</h1>
-<p class="p-0.5 text-lg text-gray-500 font-normal sm:px-6 lg:px-8">This is a list of latest transactions.</p>
+<div class="pt-6 sm:px-6 lg:px-8 pb-10">
+  <div>
+    <h1 class="inline-block text-3xl font-extrabold text-gray-900 tracking-tight">Pending submissions</h1>
+  </div>
+  <p class="text-lg text-gray-500">This is a list of latest transactions.</p>
+</div>
 <!-- This example requires Tailwind CSS v2.0+
      Table -->
 <div class="flex flex-col">
@@ -60,7 +64,7 @@
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                 <button class="h-8 px-4 text-white transition-colors duration-150 bg-green-600 
-                  rounded-full focus:shadow-outline hover:bg-green-700">Sent to company</button>
+                  rounded-full focus:shadow-outline hover:bg-green-700" (click)="toTrue()">Sent to company</button>
               </td>
             </tr>
 
@@ -74,7 +78,7 @@
 
 <!-- This example requires Tailwind CSS v2.0+
      Pagination -->
-<div class="bg-white px-4 py-3 flex items-center justify-between border-gray-200 sm:px-6 lg:px-8">
+<div class="px-4 py-3 flex items-center justify-between border-gray-200 sm:px-6 lg:px-8">
   <div class="flex-1 flex justify-between sm:hidden">
     <a href="#"
       class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
@@ -151,6 +155,67 @@
           </svg>
         </a>
       </nav>
+    </div>
+  </div>
+</div>
+
+<!-- This is the SentIndicator -->
+<div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" *ngIf="SentIndicator">
+  <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+    <!--
+      Background overlay, show/hide based on modal state.
+
+      Entering: "ease-out duration-300"
+        From: "opacity-0"
+        To: "opacity-100"
+      Leaving: "ease-in duration-200"
+        From: "opacity-100"
+        To: "opacity-0"
+    -->
+    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+
+    <!-- This element is to trick the browser into centering the modal contents. -->
+    <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+    <!--
+      Modal panel, show/hide based on modal state.
+
+      Entering: "ease-out duration-300"
+        From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+        To: "opacity-100 translate-y-0 sm:scale-100"
+      Leaving: "ease-in duration-200"
+        From: "opacity-100 translate-y-0 sm:scale-100"
+        To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+    -->
+    <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+      <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+        <div class="sm:flex sm:items-start">
+          <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-gray-100 sm:mx-0 sm:h-10 sm:w-10">
+            <!-- Heroicon name: outline/exclamation -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+          </div>
+          <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+              Confirm your approval
+            </h3>
+            <div class="mt-2">
+              <p class="text-sm text-gray-500">
+                If you approve this entry, the student will receive a notification that the endorsement letter has been sent to the company.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+        <button type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm">
+          Confirm
+        </button>
+        <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm" (click)="toFalse()">
+          Cancel
+        </button>
+      </div>
     </div>
   </div>
 </div>
