--- a/src/app/pages/companydirectory/companydirectory.component.html
+++ b/src/app/pages/companydirectory/companydirectory.component.html
@@ -1,5 +1,142 @@
 <app-navbar></app-navbar>
 
-<p>companydirectory works!</p>
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+  <div class="px-2 py-16 lg:text-left">
+    <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+      Company Directory
+    </p>
+    <p class="mt-4 max-w-2xl text-xl text-gray-500">
+      Over 200 companies of all sizes put their trust in our institution.
+    </p>
+  </div>
+</div>
+
+<!-- Search box -->
+<section class="relative max-w-2xl ml-24 mr-16 px-4 sm:px-6 lg:px-8 rounded-md">
+  <div class="relative">
+    <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+      <svg class="w-5 h-5 text-gray-400" viewBox="0 0 24 24" fill="none">
+        <path
+          d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+      </svg>
+    </span>
+
+    <input type="text"
+      class="w-full py-3 pl-10 pr-4 text-gray-700 bg-white border border-gray-300 rounded-md focus:border- red-500 focus:outline-none focus:ring"
+      placeholder="Search">
+  </div>
+
+  <div
+    class="relative inset-x-0 px-6 py-3 mx-5 mt-4 overflow-y-auto bg-white border border-gray-300 rounded-md max-h-72">
+    <a href="#" class="block py-1">
+      <p class="mt-2 text-sm text-gray-500">Generic Company</p>
+    </a>
+    <a href="#" class="block py-1">
+      <p class="mt-2 text-sm text-gray-500">Sorry, this company hasn't been accredited yet.</p>
+    </a>
+  </div>
+</section>
+
+<!-- Company Profiles -->
+<section class="py-12 lg:py-16 xl:py-25">
+  <div class="container mx-auto px-5">
+    <div class="grid gap-6 lg:gap-10 xl:grid-cols-4">
+      <div class="grid gap-6 sm:grid-cols-3 lg:gap-10 xl:col-span-4">
+        <div
+          class="relative bg-white p-5 rounded-xl shadow space-y-2 transition-shadow duration-200 hover:shadow-lg md:p-8 cursor-pointer">
+          <!-- Logo -->
+          <dt>
+            <div class="absolute flex items-center justify-center h-12 w-12 rounded-full bg-red-500 text-white">
+              <img class="h-12 w-12" src="../assets/img/">
+            </div>
+            <p class="ml-16 text-xl font-medium">Oracle</p>
+          </dt>
+          <dd class="ml-16 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt
+            repellat distinctio.</dd>
+        </div>
+        <div
+          class="relative bg-white p-5 rounded-xl shadow space-y-2 transition-shadow duration-200 hover:shadow-lg md:p-8 cursor-pointer">
+          <!-- Logo -->
+          <dt>
+            <div class="absolute flex items-center justify-center h-12 w-12 rounded-full bg-red-500 text-white">
+              <img class="h-12 w-12" src="../assets/img/">
+            </div>
+            <p class="ml-16 text-xl font-medium">Manulife</p>
+          </dt>
+          <dd class="ml-16 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt
+            repellat distinctio.</dd>
+        </div>
+        <div
+          class="relative bg-white p-5 rounded-xl shadow space-y-2 transition-shadow duration-200 hover:shadow-lg md:p-8 cursor-pointer">
+          <!-- Logo -->
+          <dt>
+            <div class="absolute flex items-center justify-center h-12 w-12 rounded-full bg-red-500 text-white">
+              <img class="h-12 w-12" src="../assets/img/">
+            </div>
+            <p class="ml-16 text-xl font-medium">Accenture</p>
+          </dt>
+          <dd class="ml-16 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt
+            repellat distinctio.</dd>
+        </div>
+        <div
+          class="relative bg-white p-5 rounded-xl shadow space-y-2 transition-shadow duration-200 hover:shadow-lg md:p-8 cursor-pointer">
+          <!-- Logo -->
+          <dt>
+            <div class="absolute flex items-center justify-center h-12 w-12 rounded-full bg-red-500 text-white">
+              <img class="h-12 w-12" src="../assets/img/">
+            </div>
+            <p class="ml-16 text-xl font-medium">Microsoft</p>
+          </dt>
+          <dd class="ml-16 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt
+            repellat distinctio.</dd>
+        </div>
+        <div
+          class="relative bg-white p-5 rounded-xl shadow space-y-2 transition-shadow duration-200 hover:shadow-lg md:p-8 cursor-pointer">
+          <!-- Logo -->
+          <dt>
+            <div class="absolute flex items-center justify-center h-12 w-12 rounded-full bg-red-500 text-white">
+              <img class="h-12 w-12" src="../assets/img/">
+            </div>
+            <p class="ml-16 text-xl font-medium">Microsoft</p>
+          </dt>
+          <dd class="ml-16 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt
+            repellat distinctio.</dd>
+        </div>
+        <div
+          class="relative bg-white p-5 rounded-xl shadow space-y-2 transition-shadow duration-200 hover:shadow-lg md:p-8 cursor-pointer">
+          <!-- Logo -->
+          <dt>
+            <div class="absolute flex items-center justify-center h-12 w-12 rounded-full bg-red-500 text-white">
+              <img class="h-12 w-12" src="../assets/img/">
+            </div>
+            <p class="ml-16 text-xl font-medium">Microsoft</p>
+          </dt>
+          <dd class="ml-16 text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt
+            repellat distinctio.</dd>
+        </div>
+      </div>
+    </div>
+    <!-- Pagination -->
+    <div class="flex w-full items-center justify-end">
+      <div class="flex flex-none justify-between w-auto mt-14">
+        <div
+          class="mx-4 flex items-center justify-center h-14 w-14 rounded-full bg-white border-red-500 border hover:text-white-500 transition-all text-red-500 cursor-pointer">
+          <svg class="h-6 w-6 " fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18">
+            </path>
+          </svg></div>
+        <div
+          class="flex items-center justify-center h-14 w-14 rounded-full bg-white border-red-500 border hover:text-white-500 transition-all text-red-500 cursor-pointer">
+          <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+          </svg></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 <app-footer></app-footer>
