--- a/src/app/pages/companyprofile/components/opportunities/opportunities.component.html
+++ b/src/app/pages/companyprofile/components/opportunities/opportunities.component.html
@@ -1,16 +1,19 @@
-<section class="px-2 py-32 bg-white md:px-0">
+<section class="px-2 py-30 bg-white md:px-0">
   <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-wrap w-full mb-20">
-      <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-        <h1 class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Opportunities</h1>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="lg:text-center">
+        <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+          Opportunities 
+        </p>
+        <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
+          Find ~~~
+        </p>
       </div>
-      <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:w-1/2">Find career opportunities from accredited companies you
-        might want to apply to.</p>
     </div>
-    <div class="flex flex-wrap -m-4">
+    <div class="py-12 flex flex-wrap -m-4">
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-100 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403"
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://images.unsplash.com/photo-1631161429710-040285e54f29?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
             alt="content">
           <h3 class="tracking-widest text-green-500 text-xs font-medium">OCT. 3 2020</h3>
           <h2 class="text-xl text-gray-900 font-medium">Back-end engineer</h2>
@@ -21,7 +24,7 @@
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-100 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403"
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://images.unsplash.com/photo-1631119462511-ca1b5813cebd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
             alt="content">
           <h3 class="tracking-widest text-green-500 text-xs font-medium">OCT. 3 2020</h3>
           <h2 class="text-xl text-gray-900 font-medium">Business Analyst</h2>
@@ -32,7 +35,7 @@
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-100 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403"
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://images.unsplash.com/photo-1631116617815-b7375480a016?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
             alt="content">
           <h3 class="tracking-widest text-green-500 text-xs font-medium">OCT. 3 2020</h3>
           <h2 class="text-xl text-gray-900 font-medium">Quality Assurance Officer</h2>
@@ -43,7 +46,7 @@
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-100 p-6 rounded-lg">
-          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403"
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://images.unsplash.com/photo-1628191079582-f982c2fe327b?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
             alt="content">
           <h3 class="tracking-widest text-green-500 text-xs font-medium">OCT. 3 2020</h3>
           <h2 class="text-xl text-gray-900 font-medium">Quality Assurance Officer</h2>
