--- a/src/app/pages/endorsementform/endorsementform.component.html
+++ b/src/app/pages/endorsementform/endorsementform.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div class="min-h-screen flex  justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+<div class="min-h-screen flex justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
   <form action="#" method="POST">
     <div class="place-self-center p-4">
       <h1 class="text-2xl text-center font-medium text-gray-900">
@@ -8,32 +8,34 @@
       </h1>
     </div>
 
-    <div class="shadow overflow-hidden sm:rounded-md">
+    <div class="shadow overflow sm:rounded-md">
       <div class="px-4 py-5 bg-white sm:p-6">
-        <h2 class="my-8 text-2xl font-medium text-gray-900">
-          Personal Information
-        </h2>
+        <!-- <h2 class="flex my-8 text-base font-medium text-gray-700">
+          - Eligible practicum students who would like to request for recommendation letter should properly accomplish this form. 
+          - Contact your Practicum Coordinator to seek for approval if you need to request for more than two (2) letters.
+          - Status of your request will be posted by the Practicum 2  Coordinator at your Blackboard course site.
+        </h2> -->
         <div class="grid grid-cols-6 gap-6">
           <div class="col-span-6">
             <label for="street-address" class="block text-sm font-medium text-gray-700">Last name</label>
-            <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+            <input type="text" name="street-address" id="street-address"  placeholder="dela Cruz"
               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
 
           <div class="col-span-6">
             <label for="street-address" class="block text-sm font-medium text-gray-700">First Name</label>
-            <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+            <input type="text" name="street-address" id="street-address"  placeholder="Juan"
               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
           <div class="col-span-6">
-            <label for="street-address" class="block text-sm font-medium text-gray-700">Middle Initial</label>
-            <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Middle Initial</label> 
+            <input type="text" name="street-address" id="street-address"  placeholder="A."
               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
 
-          <div class="col-span-6">
-            <label for="country" class="block text-sm font-medium text-gray-700">Specialization</label>
-            <select id="country" name="country" autocomplete="country"
+          <div class="col-span-6 sm:col-span-3 lg:col-span-3">
+            <label for="specialization" class="block text-sm font-medium text-gray-700">Specialization</label>
+            <select id="specialization" name="specialization" 
               class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
               <option>IT Automation</option>
               <option>Network and Security</option>
@@ -42,13 +44,84 @@
           </div>
 
           <div class="col-span-6">
-            <label for="street-address" class="block text-sm font-medium text-gray-700">Last </label>
-            <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Student Number </label>
+            <input type="text" name="street-address" id="street-address"  placeholder="2021123456"
               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
 
-          <div class="col-span-6 sm:col-span-6 lg:col-span-2">
-            <label for="city" class="block text-sm font-medium text-gray-700">City</label>
+          <div class="col-span-6">
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Email Address of Contact Person</label>
+            <input type="text" name="street-address" id="street-address" placeholder="companyrep@mail.com"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+
+          <div class="col-span-6 sm:col-span-3 lg:col-span-3">
+            <label for="country" class="block text-sm font-medium text-gray-700">Title of Contact Person</label>
+            <select id="country" name="country" 
+              class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+              <option>Mr.</option>
+              <option>Ms.</option>
+              <option>Engr.</option>
+              <option>Atty.</option>
+            </select>
+          </div>
+
+          <div class="col-span-6">
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Last Name of Contact Person</label>
+            <input type="text" name="street-address" id="street-address" placeholder="Santos"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+
+          <div class="col-span-6">
+            <label for="street-address" class="block text-sm font-medium text-gray-700">First Name of Contact Person</label>
+            <input type="text" name="street-address" id="street-address" placeholder="Thomasnino" 
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+
+          <div class="col-span-6">
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Official Designation</label>
+            <input type="text" name="street-address" id="street-address" placeholder="Managing Director"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+
+          <div class="col-span-6">
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Name of Company/Institution</label>
+            <input type="text" name="street-address" id="street-address" placeholder="UST"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+
+          <div class="col-span-6">
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Company Address Line 1</label>
+            <input type="text" name="street-address" id="street-address" placeholder="750 Twin Oaks Place"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+
+          <div class="col-span-6">
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Company Address Line 1</label>
+            <input type="text" name="street-address" id="street-address" placeholder="Shaw Blvd.,"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+
+          <div class="col-span-6">
+            <label for="street-address" class="block text-sm font-medium text-gray-700">Company Address Line 2</label>
+            <input type="text" name="street-address" id="street-address" placeholder="Mandaluyong City"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+
+          <div class="col-span-6 sm:col-span-3 lg:col-span-3">
+            <label for="country" class="block text-sm font-medium text-gray-700">Upload company profile</label>
+            <input type="file" id="myFile" name="filename">
+          </div>
+
+          <div class="col-span-6 sm:col-span-3 lg:col-span-3">
+            <label for="country" class="block text-sm font-medium text-gray-700">Upload acceptance letter</label>
+            <input type="file" id="myFile" name="filename">
+          </div>
+
+
+
+          <!-- <div class="col-span-6 sm:col-span-6 lg:col-span-2">
+            <label for="city" class="block text-sm font-medium text-gray-700">No. o</label>
             <input type="text" name="city" id="city"
               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
@@ -63,12 +136,12 @@
             <label for="postal-code" class="block text-sm font-medium text-gray-700">ZIP / Postal</label>
             <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code"
               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
         <button type="submit"
-          class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          class="inline-flex justify-center py-2 px-8 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
           Submit
         </button>
       </div>
