--- a/src/app/pages/landing/components/application/application.component.html
+++ b/src/app/pages/landing/components/application/application.component.html
@@ -8,13 +8,13 @@
             <h1
               class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl">
               <span class="block xl:inline">The Internship Platform</span>
-              <span class="block text-green-600 xl:inline"> for CICS.</span>
+              <span class="block text-red-500 xl:inline"> for CICS.</span>
             </h1>
-            <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">Complete your pre-internship
+            <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">Complete your requirements for the endorsement request
               application in a breeze.</p>
             <div class="relative flex flex-col sm:flex-row sm:space-x-4">
               <a routerLink="endorsementform"
-                class="flex items-center w-full px-6 py-3 mb-3 text-lg text-white bg-green-600 rounded-md sm:mb-0 hover:bg-green-700 sm:w-auto">
+                class="flex items-center w-full px-6 py-3 mb-3 text-lg text-red-500 font-bold border border-red-500 hover:bg-red-500 hover:text-white focus:shadow-outline rounded-2xl sm:mb-0  sm:w-auto">
                 Start here
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -27,7 +27,7 @@
         </div>
         <div class="w-full md:w-1/2">
           <div class="w-full h-auto overflow-hidden sm:rounded-xl">
-            <img src="./assets/img/hero-img.png">
+            <img src="./assets/img/hero-img.svg" alt="Illustration of a person using a computer">
           </div>
         </div>
       </div>
