--- a/src/app/pages/landing/components/navbar/navbar.component.html
+++ b/src/app/pages/landing/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <nav class="hidden md:flex space-x-10">
           <div class="relative">
             <!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
-            <a type="button" class="text-gray-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" aria-expanded="false">
+            <a href="#" type="button" class="text-gray-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" aria-expanded="false">
               <span>Internship Application</span>
             </a>
   
