Changes to status page

--- a/src/app/pages/landing/components/navbar/navbar.component.html
+++ b/src/app/pages/landing/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
           </div>
         </nav>
         <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
-          <a routerLink="login" class="ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-green-600 hover:bg-green-700">
+          <a [routerLink]="['login']" class="ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-red-500 hover:bg-red-600">
             Log in
           </a>
         </div>
