--- a/src/app/pages/landing/components/status/status.component.scss
+++ b/src/app/pages/landing/components/status/status.component.scss
@@ -31,19 +31,13 @@ body {
 
 .change-company__btn {
     padding:5px;
-    background-color: green;
-    color: white;
-    border-radius: 10px;
     display: inline-block;
     width: 100%;
     text-align: center;
-    margin:10px 0;
+    margin-top:10px;
 }
 .updateForm__btn {
     padding:5px;
-    background-color: rgb(221, 221, 221);
-    color: black;
-    border-radius: 10px;
     display: inline-block;
     width: 100%;
     text-align: center;
