--- a/src/app/pages/landing/components/application/application.component.html
+++ b/src/app/pages/landing/components/application/application.component.html
@@ -1,5 +1,5 @@
 <!-- Section 1: Hero Section -->
-<section class="px-2 py-32 bg-white md:px-0">
+<section class="px-2 py-32 bg-gradient-to-r from-red-500 md:px-0" style="background-image: url()">
     <div class="container items-center max-w-6xl px-8 mx-auto xl:px-5">
       <div class="flex flex-wrap items-center sm:-mx-3">
         <div class="w-full md:w-1/2 md:px-3">
@@ -19,7 +19,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <line x1="5" y1="12" x2="19" y2="12"></line>
-                  <polyline points="12 5 19 12 12 19"></polyline>
+                  <polyline points="12 5 19 12 12 19"></polyline> 
                 </svg>
               </a>
             </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="w-full md:w-1/2">
           <div class="w-full h-auto overflow-hidden sm:rounded-xl">
-            <img src="./assets/img/hero-img.svg" alt="Illustration of a person using a computer">
+            <img src="https://res.cloudinary.com/daljbo1q0/image/upload/v1632199269/Landing/hero-img_oqvvgz.svg" alt="Illustration of a person using a computer">
           </div>
         </div>
       </div>
