Changes to ISO Code

--- a/src/app/pages/admin/components/admin-accounts/components/sections/sections.component.html
+++ b/src/app/pages/admin/components/admin-accounts/components/sections/sections.component.html
@@ -22,9 +22,9 @@
               <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                 Section
               </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class=" py-3 text-xs font-medium text-gray-500 uppercase">
               </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class="py-3 text-xs font-medium text-gray-500 uppercase">
               </th>
             </tr>
           </thead>
@@ -34,11 +34,11 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                 4-ITA
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                 <button class="h-8 px-4 text-white transition-colors duration-150 bg-green-600 
                         rounded-full focus:shadow-outline hover:bg-green-700" (click)="toUpdate()">Update</button>
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                 <button class="h-8 px-4 text-black transition-colors duration-150 bg-gray-200
                         rounded-full focus:shadow-outline hover:bg-gray-300">Delete</button>
               </td>
