--- a/src/app/pages/admin/components/admin-events/admin-events.component.html
+++ b/src/app/pages/admin/components/admin-events/admin-events.component.html
@@ -100,7 +100,7 @@
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                     <button class="block h-8 px-4 text-white transition-colors duration-150 bg-green-600 
                     rounded-full focus:shadow-outline hover:bg-green-700">Update</button>
-                  </td>
+                </td>
                   <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                     <button class="block h-8 px-4 text-black transition-colors duration-150 bg-gray-200
                     rounded-full focus:shadow-outline hover:bg-gray-300">Delete</button>
@@ -113,4 +113,4 @@
     </div>
   </div>
 </div>
-  
+</div>
