--- a/src/app/pages/admin/components/admin-accounts/components/coordinator/coordinator.component.html
+++ b/src/app/pages/admin/components/admin-accounts/components/coordinator/coordinator.component.html
@@ -11,7 +11,7 @@
 
   <div class="flex flex-col">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8 sm:px-6 lg:px-8">
-      <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="align-middle inline-block min-w-full sm:px-6 lg:px-8">
         <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
           <table class="min-w-full divide-y divide-gray-200">
             <!-- User Assignment -->
@@ -47,7 +47,7 @@
   </div>
 
   <!-- Table -->
-  <div class="flex flex-col">
+  <div class="py-12 flex flex-col">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8 sm:px-6 lg:px-8">
       <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
         <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
