--- a/src/app/pages/admin/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/components/admin-dashboard/admin-dashboard.component.html
@@ -1,43 +1,16 @@
 <h1 class="p-5 flex items-center text-3xl font-extrabold text-gray-900 sm:px-6 lg:px-8">Dashboard</h1>
 
 <div class="sm:px-6 lg:px-8 ">
-  <div class="px-4 py-3 mb-8 rounded-lg bg-green-100 to-white shadow">
+  <div class="px-4 py-3 mb-8 rounded-lg bg-red-100 to-white shadow">
     <p class="text-2xl md:text-3xl mb-1 font-bold">Welcome, Practicum Coordinator 👋</p>
     <p class="text-base font-medium text-gray-700">Find the latest updates on InternConnect today:</p>
   </div>
 </div>
 
-<div class="sm:px-6 lg:px-8 ">
-  <div class="grid gap-6 mb-8 md:grid-cols-2">
-    <div class="min-w-0 p-4 bg-blue-100 rounded-lg shadow-xs">
-      <h4 class="mb-4 font-semibold text-gray-600">
-        -
-      </h4>
-      <p class="text-gray-600">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-        Fuga, cum commodi a omnis numquam quod? Totam exercitationem
-        quos hic ipsam at qui cum numquam, sed amet ratione! Ratione,
-        nihil dolorum.
-      </p>
-    </div>
-    <div class="min-w-0 p-4 bg-blue-100 rounded-lg shadow-xs">
-      <h4 class="mb-4 font-semibold text-gray-600">
-        -
-      </h4>
-      <p class="text-gray-600">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-        Fuga, cum commodi a omnis numquam quod? Totam exercitationem
-        quos hic ipsam at qui cum numquam, sed amet ratione! Ratione,
-        nihil dolorum.
-      </p>
-    </div>
-  </div>
-</div>
-
-<div class="grid gap-6 mb-8 md:grid-cols-2 xl:grid-cols-4 sm:px-6 lg:px-8">
+<div class="grid gap-4 mb-8 md:grid-cols-2 xl:grid-cols-4 sm:px-6 lg:px-8">
   <!-- Card -->
   <div class="flex items-center p-4 rounded-lg border shadow-xs bg-white">
-    <div class="p-3 mr-4 text-orange-500 bg-orange-100 rounded-full text-orange-100 bg-orange-500">
+    <div class="p-3 mr-4 bg-orange-100 rounded-full">
       <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
         <path
           d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z">
@@ -106,5 +79,28 @@
         Students with requests
       </p>
     </div>
+  </div>
+</div>
+
+<div class="sm:px-6 lg:px-8 ">
+  <div class="grid gap-6 mb-8 md:grid-cols-3">
+    <div class="min-w-0 p-4 bg-white rounded-lg shadow-sm">
+      <h4 class="mb-4 font-semibold text-gray-600">
+        Internship status
+      </h4>
+      <canvas id="status_chart" style="position: relative; height:10vh; width:20vw"></canvas>
+    </div>
+    <div class="min-w-0 col-span-2 p-4 bg-white rounded-lg shadow-sm">
+      <h4 class="mb-4 font-semibold text-gray-600">
+        Companies with the most number of interns
+      </h4>
+      <canvas id="company_chart" style="position: relative; height:10vh; width:20vw"></canvas>
+    </div>
+  </div>
+</div>
+
+<div class="sm:px-6 lg:px-8 ">
+  <div class="grid mb-8 md:grid-cols-1">
+   
   </div>
 </div>
