--- a/src/app/pages/admin/components/admin-submissions/components/pending-submissions/pending-submissions.component.html
+++ b/src/app/pages/admin/components/admin-submissions/components/pending-submissions/pending-submissions.component.html
@@ -60,7 +60,7 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
                 </svg>
-                <a href="#" class="text-green-600 hover:text-green-900">Download</a>
+                <a href="#" class="text-green-600 hover:text-green-900">View attachment</a>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                 <button class="h-8 px-4 text-white transition-colors duration-150 bg-green-600 
