Minor UI changes

--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,5 +1,7 @@
-<div class="relative min-h-screen md:flex bg-gray-50">
+<div class="lg:flex overflow-y-auto bg-gray-50">
   <app-admin-sidebar>
   </app-admin-sidebar>
     <router-outlet></router-outlet>
 </div>
+
+<!-- h-full  lg:h-auto lg:block lg:relative lg:sticky lg:bg-transparent overflow-hidden lg:top-18 bg-white mr-24 lg:mr-0 -->
