--- a/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="bg-white shadow">
 
 <!-- mobile menu bar -->
-<div class="text-black-100 flex justify-between md:hidden ">
+<div class="text-black-100 flex justify-between md:hidden">
   <!-- logo -->
   <a href="#" class="block p-4 text-black font-bold">Menu</a>
 
@@ -14,8 +14,7 @@
 </div>
 
 <!-- sidebar -->
-<div class="sidebar text-grey-100 w-64 space-y-6 py-7 px-2 inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out">
-
+<div class="sidebar h-full overflow-y-auto scrolling-touch text-grey-100 w-64 space-y-6 py-7 px-2 inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out">
   <!-- logo -->
   <a href="#" class="text-black flex items-center space-x-2 px-12">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 102.66 120.85" style="fill:#079271!important">
@@ -33,7 +32,8 @@
     <p class="text-base font-semibold">InternConnect</p>
   </a>
 
-  <!-- nav -->
+  <!-- nav --> 
+  <nav class="overflow-y-auto"> 
   <ul class="flex flex-col py-4 space-y-1">
     <li class="px-5">
       <div class="flex flex-row items-center h-8">
@@ -325,19 +325,6 @@
       </a>
     </li>
   </ul>
+</nav>
 </div>
 
-</div>
-<!-- Content of each page selected -->
-<!-- <div class="p-5 text-2xl font-bold"> -->
-<!-- <app-admin-dashboard></app-admin-dashboard> -->
-<!-- <app-admin-submissions></app-admin-submissions> -->
-<!-- <app-admin-esignature></app-admin-esignature> -->
-<!-- <app-admin-content></app-admin-content> -->
-<!-- <app-admin-accounts></app-admin-accounts> -->
-<!-- <app-admin-iso></app-admin-iso> -->
-<!-- <app-admin-reports></app-admin-reports> -->
-<!-- <app-admin-events></app-admin-events> -->
-<!-- <app-admin-logs></app-admin-logs> -->
-<!-- <app-admin-acadyear></app-admin-acadyear> -->
-<!-- </div>  -->
