--- a/src/app/pages/endorsementform/endorsementform.component.html
+++ b/src/app/pages/endorsementform/endorsementform.component.html
@@ -3,8 +3,8 @@
 <div class="min-h-screen flex justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
   <form action="#" method="POST">
     <div class="place-self-center p-4">
-      <h1 class="text-2xl text-center font-medium text-gray-900">
-        Fill out Endorsement Form
+      <h1 class="text-3xl text-center font-extrabold text-gray-900">
+        Endorsement Form Request
       </h1>
     </div>
 
