--- a/src/app/pages/admin/components/admin-accounts/components/chair/chair.component.html
+++ b/src/app/pages/admin/components/admin-accounts/components/chair/chair.component.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Table -->
-    <div class="flex flex-col">
+    <div class="pt-8 flex flex-col">
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8 sm:px-6 lg:px-8">
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
           <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
@@ -233,7 +233,7 @@
             </div>
           </div>
         </div>
-        <div class="px-4 py-6 sm:px-6 sm:flex sm:flex-row-reverse">
+        <div class="pt-6 sm:flex sm:flex-row-reverse">
           <button type="button"
             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none 
             focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm">
