--- a/src/app/pages/admin/components/admin-accounts/components/programs/programs.component.html
+++ b/src/app/pages/admin/components/admin-accounts/components/programs/programs.component.html
@@ -103,7 +103,7 @@
             </div>
           </div>
         </div>
-        <div class="px-4 py-6 sm:px-6 sm:flex sm:flex-row-reverse">
+        <div class="pt-6 sm:flex sm:flex-row-reverse">
           <button type="button"
             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm">
             Create
@@ -163,7 +163,7 @@
             </div>
           </div>
         </div>
-        <div class="px-4 py-6 sm:px-6 sm:flex sm:flex-row-reverse">
+        <div class="pt-6 sm:flex sm:flex-row-reverse">
           <button type="button"
             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm">
             Update
@@ -285,7 +285,7 @@
             </div>
           </div>
         </div>
-        <div class="px-4 py-6 sm:px-6 sm:flex sm:flex-row-reverse">
+        <div class="pt-6 sm:flex sm:flex-row-reverse">
           <button type="button"
             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm">
             Create
@@ -345,7 +345,7 @@
             </div>
           </div>
         </div>
-        <div class="px-4 py-6 sm:px-6 sm:flex sm:flex-row-reverse">
+        <div class="pt-6 sm:flex sm:flex-row-reverse">
           <button type="button"
             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm">
             Update
