--- a/src/app/pages/admin/components/admin-accounts/components/sections/sections.component.html
+++ b/src/app/pages/admin/components/admin-accounts/components/sections/sections.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <!-- Table -->
-<div class="flex flex-col">
+<div class="flex flex-col w-3/5">
   <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8 sm:px-6 lg:px-8">
     <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
       <button type="button"
@@ -34,11 +34,11 @@
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                 4-ITA
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+              <td class="px-2 py-4 whitespace-nowrap text-sm font-medium">
                 <button class="h-8 px-4 text-white transition-colors duration-150 bg-green-600 
                         rounded-full focus:shadow-outline hover:bg-green-700" (click)="toUpdate()">Update</button>
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+              <td class="px-2 py-4 whitespace-nowrap text-sm font-medium">
                 <button class="h-8 px-4 text-black transition-colors duration-150 bg-gray-200
                         rounded-full focus:shadow-outline hover:bg-gray-300">Delete</button>
               </td>
@@ -96,7 +96,7 @@
             </div>
           </div>
         </div>
-        <div class="px-4 py-6 sm:px-6 sm:flex sm:flex-row-reverse">
+        <div class="pt-6 sm:flex sm:flex-row-reverse">
           <button type="button"
             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm">
             Create
@@ -156,7 +156,7 @@
             </div>
           </div>
         </div>
-        <div class="px-4 py-6 sm:px-6 sm:flex sm:flex-row-reverse">
+        <div class="pt-6 sm:flex sm:flex-row-reverse">
           <button type="button"
             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:ml-3 sm:w-auto sm:text-sm">
             Update
