--- a/src/app/pages/admin/components/admin-submissions/components/new-submissions/new-submissions.component.html
+++ b/src/app/pages/admin/components/admin-submissions/components/new-submissions/new-submissions.component.html
@@ -33,7 +33,7 @@
               <td class="px-2 py-4 whitespace-nowrap">
                 <div class="flex items-center">
                   <div (click)="toOpen()" class="ml-4 cursor-pointer">
-                    <div class="text-sm font-medium text-gray-900 hover:text-green-700">
+                    <div class="text-sm font-semibold text-gray-800 hover:text-green-700">
                       Jane Cooper
                     </div>
                     <div class="text-sm text-gray-500">
@@ -107,9 +107,9 @@
               clip-rule="evenodd" />
           </svg>
         </a>
-        <!-- Current: "z-10 bg-indigo-50 border-indigo-500 text-indigo-600", Default: "bg-white border-gray-300 text-gray-500 hover:bg-gray-50" -->
+        <!-- Current: "z-10 bg-green-50 border-green-500 text-green-600", Default: "bg-white border-gray-300 text-gray-500 hover:bg-gray-50" -->
         <a href="#" aria-current="page"
-          class="z-10 bg-indigo-50 border-indigo-500 text-indigo-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+          class="z-10 bg-green-50 border-green-500 text-green-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
           1
         </a>
         <a href="#"
@@ -184,8 +184,8 @@
       <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
         <div class="sm:flex sm:items-start">
           <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-            <h3 class="text-2xl leading-6 font-medium text-gray-900" id="modal-title">
-              Endorsement Form
+            <h3 class="text-2xl leading-6 font-bold text-gray-900" id="modal-title">
+              Student's Endorsement Form
             </h3> 
             <div class="mt-6">
                 <div class=" bg-white">
@@ -196,26 +196,26 @@
                   </h2> -->
                   <div class="grid grid-cols-6 gap-6">
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Last name</label>
-                      <input type="text" name="street-address" id="street-address"  placeholder="dela Cruz"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
+                      <input type="text" name="last-name" id="last-name"  placeholder="dela Cruz"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">First Name</label>
-                      <input type="text" name="street-address" id="street-address"  placeholder="Juan"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="given-name" class="block text-sm font-medium text-gray-700">First Name</label>
+                      <input type="text" name="given-name" id="given-name"  placeholder="Juan"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Middle Initial</label> 
-                      <input type="text" name="street-address" id="street-address"  placeholder="A."
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="middle-initial" class="block text-sm font-medium text-gray-700">Middle Initial</label> 
+                      <input type="text" name="middle-initial" id="middle-initial"  placeholder="A."
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6 sm:col-span-3 lg:col-span-3">
                       <label for="specialization" class="block text-sm font-medium text-gray-700">Specialization</label>
-                      <select id="specialization" name="specialization" 
-                        class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                      <select id="specialization" name="specialization" disabled
+                        class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-green-500 focus:border-green-500 sm:text-sm">
                         <option>IT Automation</option>
                         <option>Network and Security</option>
                         <option>Web and Mobile App Development</option>
@@ -223,21 +223,21 @@
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Student Number </label>
-                      <input type="text" name="street-address" id="street-address"  placeholder="2021123456"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="student-number" class="block text-sm font-medium text-gray-700">Student Number </label>
+                      <input type="text" name="student-number" id="student-number"  placeholder="2021123456"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Email Address of Contact Person</label>
-                      <input type="text" name="street-address" id="street-address" placeholder="companyrep@mail.com"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="email-contactperson" class="block text-sm font-medium text-gray-700">Email Address of Contact Person</label>
+                      <input type="text" name="email-contactperson" id="email-contactperson" placeholder="companyrep@mail.com"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6 sm:col-span-3 lg:col-span-3">
-                      <label for="country" class="block text-sm font-medium text-gray-700">Title of Contact Person</label>
-                      <select id="country" name="country" 
-                        class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                      <label for="title-contactperson" class="block text-sm font-medium text-gray-700">Title of Contact Person</label>
+                      <select id="title-contactperson" name="title-contactperson" disabled
+                        class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-green-500 focus:border-green-500 sm:text-sm">
                         <option>Mr.</option>
                         <option>Ms.</option>
                         <option>Engr.</option>
@@ -246,55 +246,55 @@
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Last Name of Contact Person</label>
-                      <input type="text" name="street-address" id="street-address" placeholder="Santos"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="ln-contactperson" class="block text-sm font-medium text-gray-700">Last Name of Contact Person</label>
+                      <input type="text" name="ln-contactperson" id="ln-contactperson" placeholder="Santos"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">First Name of Contact Person</label>
-                      <input type="text" name="street-address" id="street-address" placeholder="Thomasnino" 
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="fn-contactperson" class="block text-sm font-medium text-gray-700">First Name of Contact Person</label>
+                      <input type="text" name="fn-contactperson" id="fn-contactperson" placeholder="Thomasnino" 
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Official Designation</label>
-                      <input type="text" name="street-address" id="street-address" placeholder="Managing Director"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="designation" class="block text-sm font-medium text-gray-700">Official Designation</label>
+                      <input type="text" name="designation" id="designation" placeholder="Managing Director"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Name of Company/Institution</label>
-                      <input type="text" name="street-address" id="street-address" placeholder="UST"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="company-name" class="block text-sm font-medium text-gray-700">Name of Company/Institution</label>
+                      <input type="text" name="company-name" id="company-name" placeholder="UST"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Company Address Line 1</label>
-                      <input type="text" name="street-address" id="street-address" placeholder="750 Twin Oaks Place"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="company-address-1" class="block text-sm font-medium text-gray-700">Company Address Line 1</label>
+                      <input type="text" name="company-address-1" id="company-address-1" placeholder="750 Twin Oaks Place"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Company Address Line 1</label>
-                      <input type="text" name="street-address" id="street-address" placeholder="Shaw Blvd.,"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="company-address-2" class="block text-sm font-medium text-gray-700">Company Address Line 2</label>
+                      <input type="text" name="company-address-2" id="company-address-2" placeholder="Shaw Blvd.,"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6">
-                      <label for="street-address" class="block text-sm font-medium text-gray-700">Company Address Line 2</label>
-                      <input type="text" name="street-address" id="street-address" placeholder="Mandaluyong City"
-                        class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                      <label for="company-address-3" class="block text-sm font-medium text-gray-700">Company Address Line 3</label>
+                      <input type="text" name="company-address-3" id="company-address-3" placeholder="Mandaluyong City"
+                        class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
                     </div>
           
                     <div class="col-span-6 sm:col-span-3 lg:col-span-3">
-                      <label for="country" class="block text-sm font-medium text-gray-700">Company profile</label>
-                      <a href="" class="hover:text-blue-600">File link</a>
+                      <label for="company-profile" class="block text-sm font-medium text-gray-700">Company profile</label>
+                      <a href="" class="hover:text-blue-600 md:hover:underline font-semibold">File link</a>
                     </div>
           
                     <div class="col-span-6 sm:col-span-3 lg:col-span-3">
-                      <label for="country" class="block text-sm font-medium text-gray-700">Acceptance letter</label>
-                      <a href="" class="hover:text-blue-600">File link</a>
+                      <label for="acceptance-letter" class="block text-sm font-medium text-gray-700">Acceptance letter</label>
+                      <button href="" class="hover:text-blue-600 md:hover:underline font-semibold border-solid">File link</button>
                     </div>
                 </div>
               </div>
@@ -303,7 +303,7 @@
         </div>
       </div>
       <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-        <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm" (click)="toClose()">
+        <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm" (click)="toClose()">
           Return
         </button>
       </div>
@@ -420,7 +420,7 @@
               <div class="mt-4 col-span-6">
                 <label for="street-address" class="block text-sm font-medium text-gray-700">Description</label>
                 <textarea type="text" name="street-address" id="street-address" placeholder="Lorem Ipsum Dolor sit amet"
-                  class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" rows="4"></textarea>
+                  class="mt-1 focus:ring-green-500 focus:border-green-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" rows="4"></textarea>
               </div>
             </div>
           </div>
